@@ -4,4 +4,5 @@ text_editor = default
 paper = letter
 ads_token = None
 ads_display = 20
+pdf_dir = HOME/pdf/
 
