@@ -1481,3 +1481,10 @@ Added validator/bottom toolbar to cli_search() prompt.
 I have not idea how to pytest the bottom toolbar nor the
 auto-completions/auto-suggestions.
 
+
+*****  Mon Dec 30 09:09:56 CLT 2019  *****
+
+Added pdf_dir config parameter where to store PDF files.
+Create u.HOME/pdf/ folder on bm.init() call (default dir for PDFs).
+Updated and added tests.
+
